Upload video asynchronously
